manifests/back/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: portfolio
  labels:
    app: portfolio-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: portfolio-api
  template:
    metadata:
      namespace: portfolio
      labels:
        app: portfolio-api
    spec:
      containers:
        - name: portfolio-backend
          image: ghcr.io/adaptive-alexander/portfolio-backend:v0.1.7
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 2
            failureThreshold: 10
            httpGet:
              scheme: HTTP
              port: 8080
              path: /health
