manifests/back/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-api-service
  namespace: portfolio
  labels:
    app: portfolio-api
  annotations:
    cloud.google.com/backend-config: '{"default": "portfolio-api-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: portfolio-api
  ports:
  - port: 80
    targetPort: 8080
