manifests/back/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.global-static-ip-name: portfolio-api-ip
    networking.gke.io/v1beta1.FrontendConfig: portfolio-api-frontend-config
  name: portfolio-api-ingress
  namespace: portfolio
  labels:
    app: portfolio-api
spec:
  tls:
  - hosts:
    - api.alexander.hyll.nu
    secretName: portfolio-api-cert
  rules:
  - host: api.alexander.hyll.nu
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: portfolio-api-service
            port:
              number: 80
